# JVMTI_Sample

./: LICENSE  README.md  settings.gradle
app/src/main/java/com/dodola/jvmti/: Main2Activity.java
app/src/main/res/layout/: activity_main.xml
jvmtilib/: CMakeLists.txt
jvmtilib/src/main/cpp/: native-lib.cpp
jvmtilib/src/main/cpp/dexer/: Android.bp
jvmtilib/src/main/java/com/dodola/jvmtilib/: JVMTIHelper.java
